Uploading final Challenge

--- a/WeatherPy/WeatherPy_Script.ipynb
+++ b/WeatherPy/WeatherPy_Script.ipynb
@@ -1703,6 +1703,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 41,
    "metadata": {},
@@ -1751,7 +1756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** The r-values of these tell us that the correlation between Latitude and Maximum Temperatures is moderate to strong. As latitude increases in the Southern Hemisphere and decreases in the Northern Hemisphere (gets closer to the Equator), temperatures tend to increase as well."
    ]
   },
   {
@@ -1806,6 +1811,11 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "metadata": {},
@@ -1853,7 +1863,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** The r-values for the Latitude vs. Humidity relationships tell us that there is little to no correlation between the two. Humidity is not likely to be affected solely by moving closer to or farther from the Equator."
    ]
   },
   {
@@ -1955,7 +1965,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** Like with Humidity, Cloudiness has little to no correlation with Latitude. both r-values show very week correlative relationships between both Northern and Southern Hemisphere latitudes with cloudiness."
    ]
   },
   {
@@ -2057,14 +2067,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Discussion about the linear relationship:** YOUR RESPONSE HERE"
+    "**Discussion about the linear relationship:** The relationship between Wind Speed and Latitude is perhaps the least correlated of the four we compared. with absolute r-values of 0.17 and 0.13, there is little-to-no correlation here. Wind speed is not affected by proximity to the Equator."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
